--- a/homework_3/src/CMakeLists.txt
+++ b/homework_3/src/CMakeLists.txt
@@ -1,8 +1,7 @@
 add_library(html_writer html_writer.cpp)
 add_library(image_browser image_browser.cpp)
 add_executable(main main.cpp)
-target_link_libraries(main html_writer)
-target_link_libraries(main image_browser)
+target_link_libraries(main html_writer image_browser) 
 install(TARGETS main
         DESTINATION ${CMAKE_SOURCE_DIR}/bin)
 install(TARGETS html_writer
